--- a/src/main/web/resources/style/homeStyle.css
+++ b/src/main/web/resources/style/homeStyle.css
@@ -28,7 +28,7 @@ html, body{
     padding-top: 1em;
     max-width: 100%;
     height: auto;
-    background-image: url('/resources/graphics/caliper.jpg') ;
+    background-image: url('../graphics/caliper.jpg') ;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
